// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Hits accepts a custom className 1`] = `
<div
  className="cvi-hits MyCustomHits"
>
  <ul
    className="cvi-hits-list"
  >
    <li
      className="cvi-hits-item"
    >
      <div
        id={0}
      />
    </li>
    <li
      className="cvi-hits-item"
    >
      <div
        id={1}
      />
    </li>
    <li
      className="cvi-hits-item"
    >
      <div
        id={2}
      />
    </li>
  </ul>
</div>
`;

exports[`Hits accepts a hitComponent prop 1`] = `
<div
  className="cvi-hits"
>
  <ul
    className="cvi-hits-list"
  >
    <li
      className="cvi-hits-item"
    >
      <div
        id={0}
      />
    </li>
    <li
      className="cvi-hits-item"
    >
      <div
        id={1}
      />
    </li>
    <li
      className="cvi-hits-item"
    >
      <div
        id={2}
      />
    </li>
  </ul>
</div>
`;
